Add postgres users-db service to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,18 @@ services:
       - FLASK_APP=project/__init__.py
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig
+      - DATABASE_PROD_URL=postgres://postgres@users-db:5432/users_prod
+      - DATABASE_QA_URL=postgres://postgres@users-db:5432/users_qa
+      - DATABASE_DEV_URL=postgres://postgres@users-db:5432/users_dev
+    depends_on: 
+      - users-db
+  
+  users-db:
+    build: 
+      context: ./services/users/project/db
+      dockerfile: Dockerfile
+    ports: 
+     - 5435:5432
+    environment: 
+     - POSTGRES_USER=postgres
+     - POSTGRES_PASSWORD=postgres
