--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     environment:
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig
-      - DATABASE_PROD_URL=postgres://postgres@users-db:5432/users_prod
-      - DATABASE_QA_URL=postgres://postgres@users-db:5432/users_qa
-      - DATABASE_DEV_URL=postgres://postgres@users-db:5432/users_dev
+      - DATABASE_PROD_URL=postgres://postgres:postgres@users-db:5432/users_prod
+      - DATABASE_QA_URL=postgres://postgres:postgres@users-db:5432/users_qa
+      - DATABASE_DEV_URL=postgres://postgres:postgres@users-db:5432/users_dev
     depends_on: 
       - users-db
   
