--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,8 +6,8 @@ services:
     build:
       context: ./services/users
       dockerfile: Dockerfileprod
-    ports:
-      - 5001:5000
+    expose:
+      - 5000
     environment:
       - FLASK_ENV=production
       - APP_SETTINGS=project.config.ProductionConfig
@@ -21,8 +21,18 @@ services:
     build: 
       context: ./services/users/project/db
       dockerfile: Dockerfile
-    ports: 
-     - 5435:5432
+    expose: 
+     - 5432
     environment: 
      - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=postgres
+  
+  nginx:
+    build:
+      context: ./services/nginx
+      dockerfile: Dockerfileprod
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - users
