--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,7 +13,7 @@ services:
       - APP_SETTINGS=project.config.ProductionConfig
       - DATABASE_PROD_URL=postgres://postgres:postgres@users-db:5432/users_prod
       - DATABASE_QA_URL=postgres://postgres:postgres@users-db:5432/users_qa
-
+      - SECRET_KEY=mysupersecretkey
     depends_on: 
       - users-db
   
