Dockerize web service, deploy config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,29 @@ services:
     environment: 
      - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=postgres
+     
+  web:
+    build:
+      context: ./services/web
+      dockerfile: Dockerfile
+    volumes:
+      - './services/web:/usr/src/app'
+      - /usr/src/app/node_modules
+    ports:
+      - 3007:3000
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    depends_on:
+      - users
+  
+  nginx:
+    build:
+      context: ./services/nginx
+      dockerfile: Dockerfileprod
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - users
+      - web
